# serializer version: 1
# name: test_entities[button.samsung_tv_ad_subtitle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_ad_subtitle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AD/Subtitle',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AD/Subtitle',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ad_subtitle',
    'unique_id': '01JTEST0000000000000000000_ad_subtitle',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_ad_subtitle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV AD/Subtitle',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_ad_subtitle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_blue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_blue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Blue',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Blue',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'blue',
    'unique_id': '01JTEST0000000000000000000_blue',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_blue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Blue',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_blue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_browser-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_browser',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Browser',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Browser',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'browser',
    'unique_id': '01JTEST0000000000000000000_browser',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_browser-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Browser',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_browser',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Down',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'down',
    'unique_id': '01JTEST0000000000000000000_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Down',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_e_manual-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_e_manual',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'E-Manual',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'E-Manual',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'e_manual',
    'unique_id': '01JTEST0000000000000000000_e_manual',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_e_manual-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV E-Manual',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_e_manual',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_exit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_exit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Exit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Exit',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'exit',
    'unique_id': '01JTEST0000000000000000000_exit',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_exit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Exit',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_exit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_fast_forward-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_fast_forward',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fast forward',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fast forward',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fast_forward',
    'unique_id': '01JTEST0000000000000000000_fast_forward',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_fast_forward-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Fast forward',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_fast_forward',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_green-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_green',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Green',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Green',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'green',
    'unique_id': '01JTEST0000000000000000000_green',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_green-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Green',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_green',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Home',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home',
    'unique_id': '01JTEST0000000000000000000_home',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Home',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_info-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_info',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Info',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Info',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'info',
    'unique_id': '01JTEST0000000000000000000_info',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_info-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Info',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_info',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Left',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Left',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'left',
    'unique_id': '01JTEST0000000000000000000_left',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Left',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 0',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_0',
    'unique_id': '01JTEST0000000000000000000_num_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 0',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 1',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_1',
    'unique_id': '01JTEST0000000000000000000_num_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 1',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 2',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_2',
    'unique_id': '01JTEST0000000000000000000_num_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 2',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 3',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_3',
    'unique_id': '01JTEST0000000000000000000_num_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 3',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 4',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_4',
    'unique_id': '01JTEST0000000000000000000_num_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 4',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 5',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_5',
    'unique_id': '01JTEST0000000000000000000_num_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 5',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 6',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 6',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_6',
    'unique_id': '01JTEST0000000000000000000_num_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 6',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 7',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 7',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_7',
    'unique_id': '01JTEST0000000000000000000_num_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 7',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 8',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 8',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_8',
    'unique_id': '01JTEST0000000000000000000_num_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 8',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_number_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 9',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 9',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_9',
    'unique_id': '01JTEST0000000000000000000_num_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 9',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_ok-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_ok',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'OK',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'OK',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ok',
    'unique_id': '01JTEST0000000000000000000_ok',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_ok-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV OK',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_ok',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': '01JTEST0000000000000000000_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Power',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_previous_channel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_previous_channel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Previous channel',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Previous channel',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'previous_channel',
    'unique_id': '01JTEST0000000000000000000_previous_channel',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_previous_channel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Previous channel',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_previous_channel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_record-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_record',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Record',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Record',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'record',
    'unique_id': '01JTEST0000000000000000000_record',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_record-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Record',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_record',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_red-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_red',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Red',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Red',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'red',
    'unique_id': '01JTEST0000000000000000000_red',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_red-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Red',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_red',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_return-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_return',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Return',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Return',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'return',
    'unique_id': '01JTEST0000000000000000000_return',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_return-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Return',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_return',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_rewind-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_rewind',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rewind',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rewind',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rewind',
    'unique_id': '01JTEST0000000000000000000_rewind',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_rewind-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Rewind',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_rewind',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_right-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_right',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Right',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Right',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'right',
    'unique_id': '01JTEST0000000000000000000_right',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_right-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Right',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_settings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_settings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Settings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Settings',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'settings',
    'unique_id': '01JTEST0000000000000000000_settings',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_settings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Settings',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_settings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Source',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source',
    'unique_id': '01JTEST0000000000000000000_source',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Source',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_tools-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_tools',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Tools',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tools',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tools',
    'unique_id': '01JTEST0000000000000000000_tools',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_tools-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Tools',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_tools',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Up',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'up',
    'unique_id': '01JTEST0000000000000000000_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Up',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_yellow-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_yellow',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Yellow',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yellow',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'yellow',
    'unique_id': '01JTEST0000000000000000000_yellow',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_yellow-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Yellow',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_yellow',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
